Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-11430

Print/Page setup dialogs leak

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.7.2
    • 4.6.3
    • GUI: Printing
    • None
    • Mac OS X 10.5.8, Qt 4.6.3, Cocoa 32-bit
    • 165dbe2615bf4b908e6bc84bb8963ca72fe5f866

    Description

      This may affect other platforms, or may be specific to the Mac sheet implementation.

      If a QPrintDialog/QPageSetupDialog dialog has the Qt::WA_DeleteOnClose attribute set to true, closing the dialog does perform the normal "delete later" setup (e.g., QAbstractPageSetupDialog::done calls QWidgetPrivate::close_helper, which calls deleteLater to schedule the object for deletion).

      However the object is never actually deleted, even after control returns to the event loop, and the dialog is leaked.

      This can be seen by subclassing one of these dialogs, emitting a log message in the destructor, then opening/closing the dialog.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kjernase Trond Kjernåsen (Inactive)
            refnum Dair Grant
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes