Fixed crash when using Qt::WA_DeleteOnClose on a QPrintDialog on Mac.

The Qt::WA_DeleteOnClose bug was fixed some time ago, while this
workaround was "forgotten" in the QPrintDialog code. It actually
causes a crash and is no longer necessary.

Task-number: QTBUG-11430
Reviewed-by: Prasanth
(cherry picked from commit 165dbe2615bf4b908e6bc84bb8963ca72fe5f866)