src/gui/dialogs/qprintdialog_mac.mm
@@ -140,11 +140,6 @@ QT_USE_NAMESPACE
 
     QPrintDialogPrivate *d = static_cast<QPrintDialogPrivate *>(contextInfo);
     QPrintDialog *dialog = d->printDialog();
-    // temporary hack to work around bug in deleteLater() in Qt/Mac Cocoa
-#if 1
-    bool deleteDialog = dialog->testAttribute(Qt::WA_DeleteOnClose);
-    dialog->setAttribute(Qt::WA_DeleteOnClose, false);
-#endif
 
     if (returnCode == NSOKButton) {
         UInt32 frompage, topage;
@@ -192,10 +187,6 @@ QT_USE_NAMESPACE
     }
 
     dialog->done((returnCode == NSOKButton) ? QDialog::Accepted : QDialog::Rejected);
-#if 1
-    if (deleteDialog)
-        delete dialog;
-#endif
 }
 @end
 
